# things-people-might-want

./: README.md
xjdr llama-jax-main/: Dockerfile  README.md  convert_hf_weights.py  generation.py  model.py  nn.py  pyproject.toml  requirements.txt  sampler.py  tokenizer.py
xjdr llama-jax-main/tests/: test_attention.py  test_attention_components.py  test_embedding.py  test_linear.py  test_moe.py  test_rmsnorm.py
xjdr simple_jax_transformer-main/: README.md  xfmr.py
